k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: holidays-api-service
spec:
  selector:
    app: holidays-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP
